fix: dice roll for check are prompted
fix: mouse creation dialog reset

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -161,6 +161,9 @@ blockquote {
 
 .mouse-creation-dialog-background {
   background-image: url('../img/mouse-creation.jpg');
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
 }
 
 .bank-dialog-background {
