--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -2,14 +2,22 @@ html,
 body,
 #app {
   font-family: 'brokenscript-bold' !important;
-  background-image: url('../img/mouse-hole.png');
-  background-repeat: no-repeat;
   margin: 0;
 }
 
-#sheet,
+#sheet {
+  background-image: url('../img/mouse-hole.png');
+  background-repeat: no-repeat;
+}
+
+#sheet-container,
 #drawer aside,
 #bank aside {
+  max-width: 800px;
+}
+
+#feature-tabs > div {
+  width: 800px;
   max-width: 800px;
 }
 
@@ -224,7 +232,7 @@ textarea {
 }
 
 .toolbar-pager {
-  max-height: 32px;
+  max-height: 30px !important;
 }
 
 .w-25 {
