feat: Full mouse advancement and rest

--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -5,4 +5,5 @@
        url('../fonts/brokenscript-bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
