--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -197,7 +197,13 @@ blockquote {
   background-color: rgba(255, 255, 255, 0.25);
 }
 
-.card-sheet .w-card__content {
+.card-bordered {
+  padding: 0;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 7px;
+}
+
+.card-sheet .w-card__content, .character-sheet .w-card__content {
   padding: 0
 }
 
