--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,18 +1,6 @@
 @font-face {
   font-family: 'brokenscript-bold';
-  src: url('../fonts/brokenscript-bold.woff2') format('woff2'),
-       url('../fonts/brokenscript-bold.woff') format('woff'),
-       url('../fonts/brokenscript-bold.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-@font-face {
-  font-family: 'GrenzeGotisch-VariableFont_wght';
-  src: url('../fonts/GrenzeGotisch-VariableFont_wght.woff2') format('woff2'),
-       url('../fonts/GrenzeGotisch-VariableFont_wght.woff') format('woff'),
-       url('../fonts/GrenzeGotisch-VariableFont_wght.ttf') format('truetype');
+  src: url('../fonts/brokenscript-bold.woff2') format('woff2'), url('../fonts/brokenscript-bold.woff') format('woff'), url('../fonts/brokenscript-bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -20,10 +8,24 @@
 
 @font-face {
   font-family: 'GrenzeGotisch-Bold';
-  src: url('../fonts/GrenzeGotisch-Bold.woff2') format('woff2'),
-       url('../fonts/GrenzeGotisch-Bold.woff') format('woff'),
-       url('../fonts/GrenzeGotisch-Bold.ttf') format('truetype');
+  src: url('../fonts/GrenzeGotisch-Bold.woff2') format('woff2'), url('../fonts/GrenzeGotisch-Bold.woff') format('woff'), url('../fonts/GrenzeGotisch-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
+}
+
+@font-face {
+  font-family: 'GrenzeGotisch-VariableFont_wght';
+  src: url('../fonts/GrenzeGotisch-VariableFont_wght.woff2') format('woff2'), url('../fonts/GrenzeGotisch-VariableFont_wght.woff') format('woff'), url('../fonts/GrenzeGotisch-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+@font-face {
+  font-family: 'Trickster-Reg';
+  src: url('../fonts/Trickster-Reg.woff2') format('woff2'), url('../fonts/Trickster-Reg.woff') format('woff'), url('../fonts/Trickster-Reg.ttf') format('truetype');
+  font-weight: normal;
+  font-style: bold;
   font-display: block;
 }
