Feature/font choice (#7)
* feat: Allow to choose a font

* feat: Allow to choose a font for display

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -1,8 +1,27 @@
 html,
 body,
 #app {
-  font-family: 'brokenscript-bold' !important;
   margin: 0;
+}
+
+.font-0 {
+  font-family: 'brokenscript-bold' !important;
+}
+
+.font-1 {
+  font-family: 'GrenzeGotisch-Bold' !important;
+  line-height: 16px;
+}
+
+.font-2 {
+  font-family: 'GrenzeGotisch-VariableFont_wght' !important;
+  line-height: 16px;
+}
+
+.font-3 {
+  font-family: 'Trickster-Reg' !important;
+  line-height: 16px;
+  letter-spacing: 0.05em;
 }
 
 .debug {
@@ -207,7 +226,7 @@ blockquote {
   border-radius: 7px;
 }
 
-.card-sheet .w-card__content, .character-sheet .w-card__content {
+.card-sheet .w-card__content, .character-sheet .w-card__content, .no-padding .w-card__content {
   padding: 0
 }
 
