Level can now be modified. (#27)
* feat: Add release branch

* chore(release): 1.8.0

* fix: publish messages and doc.

* Bugfix/default font for safari (#24)

* Default font is a monospace one.

* fix: Defaut font is now Trickster.
Safari dislike Broken script font.

* feat(items): Add large/tall custom objects (#25)

* fix(UX): Mouse creation on mobile devices (#26)

* fix(i18n): Use browser langage

* chore(release): 1.9.0

* fix: URL for the sheet.

* fix: level can be modified

* fix: add cache for app build
fix: Readme file

* chore(release): 1.9.1

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -4,10 +4,6 @@ body,
   margin: 0;
 }
 
-.font-0 {
-  font-family: 'brokenscript-bold' !important;
-}
-
 .font-1 {
   font-family: 'GrenzeGotisch-Bold' !important;
   line-height: 16px;
@@ -24,6 +20,14 @@ body,
   letter-spacing: 0.05em;
 }
 
+.font-4 {
+  font-family: 'brokenscript-bold' !important;
+}
+
+.font-5 {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 .debug {
   border: 1px solid red;
 }
@@ -36,6 +40,10 @@ body,
 #sheet-container,
 #drawer aside {
   max-width: 800px;
+}
+
+#drawer .w-tabs__content {
+  padding: 0;
 }
 
 .fixed-tabs > div {
