feature: Add 4 pages for custom cards

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -445,8 +445,8 @@ textarea {
   font-size: 80%;
 }
 
-.condition-item-custom-label,
-.item-item-custom-label {
+.condition-custom-label,
+.item-custom-label {
   font-size: 80%;
 }
 
