feat: Add Open Dyslexic font.

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -28,6 +28,11 @@ body,
   font-family: 'Courier New', Courier, monospace;
 }
 
+.font-6 {
+  font-family: 'OpenDyslexic-Regular' !important;
+  line-height: 24px;
+}
+
 .debug {
   border: 1px solid red;
 }
