--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -29,3 +29,11 @@
   font-style: bold;
   font-display: block;
 }
+
+@font-face {
+  font-family: 'OpenDyslexic-Regular';
+  src: url('../fonts/OpenDyslexic-Regular.woff2') format('woff2'), url('../fonts/OpenDyslexic-Regular.woff') format('woff'), url('../fonts/OpenDyslexic-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
