--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -33,6 +33,10 @@ body,
   line-height: 24px;
 }
 
+.font-7 {
+  font-family: 'Moyen-Age' !important;
+}
+
 .debug {
   border: 1px solid red;
 }
@@ -606,5 +610,5 @@ textarea {
 }
 
 a {
- color: var(--w-link-color); 
+ color: var(--w-link-color);
 }
